--- a/online_retail EDA (2).ipynb
+++ b/online_retail EDA (2).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Portfolio Project: Online Retail Exploratory Data Analysis with Python"
+    "# Online Retail Exploratory Data Analysis with Python"
    ]
   },
   {
